--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
   # Create and start emulator
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
-  - adb wait_for_emulator
+  - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script: ./gradlew connectedInstrumentTest
