--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,5 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: ./gradlew connectedInstrumentTest
+script: ./gradlew build connectedCheck
+
